--- a/package.json
+++ b/package.json
@@ -4941,6 +4941,26 @@
 				"category": "GitLens"
 			},
 			{
+				"command": "gitlens.createPatch",
+				"title": "Create Patch...",
+				"category": "GitLens"
+			},
+			{
+				"command": "gitlens.createCloudPatch",
+				"title": "Create Cloud Patch...",
+				"category": "GitLens"
+			},
+			{
+				"command": "gitlens.openCloudPatch",
+				"title": "Open Cloud Patch...",
+				"category": "GitLens"
+			},
+			{
+				"command": "gitlens.openPatch",
+				"title": "Open Patch...",
+				"category": "GitLens"
+			},
+			{
 				"command": "gitlens.showBranchesView",
 				"title": "Show Branches View",
 				"category": "GitLens"
@@ -6805,6 +6825,35 @@
 				"category": "GitLens"
 			},
 			{
+				"command": "gitlens.views.drafts.copy",
+				"title": "Copy",
+				"category": "GitLens"
+			},
+			{
+				"command": "gitlens.views.drafts.refresh",
+				"title": "Refresh",
+				"category": "GitLens",
+				"icon": "$(refresh)"
+			},
+			{
+				"command": "gitlens.views.drafts.create",
+				"title": "Create Cloud Patch...",
+				"category": "GitLens",
+				"icon": "$(add)"
+			},
+			{
+				"command": "gitlens.views.drafts.delete",
+				"title": "Delete Cloud Patch...",
+				"category": "GitLens",
+				"icon": "$(trash)"
+			},
+			{
+				"command": "gitlens.views.drafts.open",
+				"title": "Open",
+				"category": "GitLens",
+				"icon": "$(eye)"
+			},
+			{
 				"command": "gitlens.views.fileHistory.changeBase",
 				"title": "Change Base...",
 				"category": "GitLens",
@@ -8370,6 +8419,22 @@
 					"when": "gitlens:enabled"
 				},
 				{
+					"command": "gitlens.createPatch",
+					"when": "gitlens:enabled"
+				},
+				{
+					"command": "gitlens.createCloudPatch",
+					"when": "gitlens:enabled && gitlens:plus"
+				},
+				{
+					"command": "gitlens.openCloudPatch",
+					"when": "false"
+				},
+				{
+					"command": "gitlens.openPatch",
+					"when": "gitlens:enabled"
+				},
+				{
 					"command": "gitlens.timeline.refresh",
 					"when": "false"
 				},
@@ -9626,6 +9691,26 @@
 					"when": "false"
 				},
 				{
+					"command": "gitlens.views.drafts.copy",
+					"when": "false"
+				},
+				{
+					"command": "gitlens.views.drafts.refresh",
+					"when": "false"
+				},
+				{
+					"command": "gitlens.views.drafts.create",
+					"when": "false"
+				},
+				{
+					"command": "gitlens.views.drafts.delete",
+					"when": "false"
+				},
+				{
+					"command": "gitlens.views.drafts.open",
+					"when": "false"
+				},
+				{
 					"command": "gitlens.views.fileHistory.changeBase",
 					"when": "false"
 				},
@@ -10588,6 +10673,10 @@
 			],
 			"editor/title": [
 				{
+					"command": "gitlens.openPatch",
+					"when": "editorLangId == diff"
+				},
+				{
 					"command": "gitlens.diffWithWorking",
 					"when": "gitlens:activeFileStatus =~ /revision/ && resourceScheme =~ /^(?!(file|git)$).*$/ && !isInDiffEditor",
 					"group": "navigation@-99"
@@ -11212,6 +11301,16 @@
 					"group": "5_gitlens@1"
 				},
 				{
+					"command": "gitlens.views.drafts.refresh",
+					"when": "view =~ /^gitlens\\.views\\.drafts/",
+					"group": "navigation@99"
+				},
+				{
+					"command": "gitlens.views.drafts.create",
+					"when": "view =~ /^gitlens\\.views\\.drafts/ && gitlens:plus",
+					"group": "navigation@1"
+				},
+				{
 					"command": "gitlens.views.fileHistory.setEditorFollowingOn",
 					"when": "view =~ /^gitlens\\.views\\.fileHistory/ && gitlens:views:fileHistory:canPin && !gitlens:views:fileHistory:editorFollowing",
 					"group": "navigation@10"
@@ -11729,6 +11828,21 @@
 					"group": "inline@1"
 				},
 				{
+					"command": "gitlens.views.drafts.open",
+					"when": "viewItem =~  /gitlens:draft\\b/ && gitlens:plus",
+					"group": "inline@1"
+				},
+				{
+					"command": "gitlens.views.drafts.open",
+					"when": "viewItem =~  /gitlens:draft\\b/ && gitlens:plus",
+					"group": "1_gitlens_actions@1"
+				},
+				{
+					"command": "gitlens.views.drafts.delete",
+					"when": "viewItem =~  /gitlens:draft\\b/ && gitlens:plus",
+					"group": "6_gitlens_actions@1"
+				},
+				{
 					"command": "gitlens.views.workspaces.convert",
 					"when": "viewItem =~  /gitlens:repositories\\b(?=.*?\\b\\+workspaces\\b)/ && gitlens:plus",
 					"group": "inline@1"
@@ -12168,9 +12282,19 @@
 					"group": "1_gitlens_actions_1@1"
 				},
 				{
+					"command": "gitlens.createPatch",
+					"when": "!gitlens:untrusted && !gitlens:hasVirtualFolders && viewItem =~ /gitlens:(commit|stash)\\b/",
+					"group": "1_gitlens_actions_1@2"
+				},
+				{
+					"command": "gitlens.createCloudPatch",
+					"when": "!gitlens:untrusted && !gitlens:hasVirtualFolders && gitlens:plus && viewItem =~ /gitlens:(commit|stash)\\b/",
+					"group": "1_gitlens_actions_1@3"
+				},
+				{
 					"command": "gitlens.views.createTag",
 					"when": "!gitlens:readonly && !gitlens:untrusted && !gitlens:hasVirtualFolders && viewItem =~ /gitlens:commit\\b/",
-					"group": "1_gitlens_actions_1@2"
+					"group": "1_gitlens_actions_1@4"
 				},
 				{
 					"submenu": "gitlens/commit/changes",
@@ -13007,6 +13131,16 @@
 					"group": "1_gitlens_actions@3"
 				},
 				{
+					"command": "gitlens.createPatch",
+					"when": "!gitlens:untrusted && !gitlens:hasVirtualFolders && viewItem =~ /gitlens:compare:results(?!:)\\b/",
+					"group": "1_gitlens_secondary_actions@1"
+				},
+				{
+					"command": "gitlens.createCloudPatch",
+					"when": "!gitlens:untrusted && !gitlens:hasVirtualFolders && gitlens:plus && viewItem =~ /gitlens:compare:results(?!:)\\b/",
+					"group": "1_gitlens_secondary_actions@2"
+				},
+				{
 					"command": "gitlens.openComparisonOnRemote",
 					"when": "viewItem =~ /gitlens:compare:results(?!:)\\b/",
 					"group": "2_gitlens_quickopen@1 && gitlens:hasRemotes",
@@ -13400,9 +13534,19 @@
 					"group": "1_gitlens_actions_1@1"
 				},
 				{
+					"command": "gitlens.createPatch",
+					"when": "!gitlens:untrusted && !gitlens:hasVirtualFolders && webviewItem =~ /gitlens:(commit|stash)\\b/",
+					"group": "1_gitlens_actions_1@2"
+				},
+				{
+					"command": "gitlens.createCloudPatch",
+					"when": "!gitlens:untrusted && !gitlens:hasVirtualFolders && gitlens:plus && webviewItem =~ /gitlens:(commit|stash)\\b/",
+					"group": "1_gitlens_actions_1@3"
+				},
+				{
 					"command": "gitlens.graph.createTag",
 					"when": "!gitlens:readonly && !gitlens:untrusted && !gitlens:hasVirtualFolders && webviewItem =~ /gitlens:commit\\b/",
-					"group": "1_gitlens_actions_1@2"
+					"group": "1_gitlens_actions_1@4"
 				},
 				{
 					"submenu": "gitlens/graph/commit/changes",
@@ -13861,9 +14005,19 @@
 					"group": "1_gitlens_secondary_actions@1"
 				},
 				{
+					"command": "gitlens.createPatch",
+					"when": "!gitlens:untrusted && !gitlens:hasVirtualFolders && viewItem =~ /gitlens:file\\b(?=.*?\\b\\+committed\\b)/",
+					"group": "1_gitlens_secondary_actions@2"
+				},
+				{
+					"command": "gitlens.createCloudPatch",
+					"when": "!gitlens:untrusted && !gitlens:hasVirtualFolders && gitlens:plus && viewItem =~ /gitlens:file\\b(?=.*?\\b\\+committed\\b)/",
+					"group": "1_gitlens_secondary_actions@3"
+				},
+				{
 					"command": "gitlens.views.createTag",
 					"when": "!gitlens:readonly && !gitlens:untrusted && !gitlens:hasVirtualFolders && viewItem =~ /gitlens:file\\b(?=.*?\\b\\+committed\\b)/",
-					"group": "1_gitlens_secondary_actions@2"
+					"group": "1_gitlens_secondary_actions@4"
 				}
 			],
 			"gitlens/commit/file/changes": [
@@ -14846,6 +15000,12 @@
 				"when": "gitlens:enabled && focusedView =~ /^gitlens\\.views\\.contributors/"
 			},
 			{
+				"command": "gitlens.views.drafts.copy",
+				"key": "ctrl+c",
+				"mac": "cmd+c",
+				"when": "gitlens:enabled && focusedView =~ /^gitlens\\.views\\.drafts/"
+			},
+			{
 				"command": "gitlens.views.fileHistory.copy",
 				"key": "ctrl+c",
 				"mac": "cmd+c",
@@ -14934,6 +15094,11 @@
 					"id": "gitlensInspect",
 					"title": "GitLens Inspect",
 					"icon": "$(gitlens-gitlens-inspect)"
+				},
+				{
+					"id": "gitlensPatch",
+					"title": "Patch",
+					"icon": "$(cloud)"
 				}
 			],
 			"panel": [
@@ -14959,6 +15124,20 @@
 				"view": "gitlens.views.searchAndCompare",
 				"contents": "Compare a <branch, tag, or ref> with another <branch, tag, or ref>\n\n[Compare References...](command:gitlens.views.searchAndCompare.selectForCompare)",
 				"when": "!gitlens:hasVirtualFolders"
+			},
+			{
+				"view": "gitlens.views.drafts",
+				"contents": "Cloud Patches allow you to easily and securely share code with your teammates or other developers, accessible from anywhere, streamlining your workflow with better collaboration."
+			},
+			{
+				"view": "gitlens.views.drafts",
+				"contents": "[Create Cloud Patch](command:gitlens.views.drafts.create)\n\n☁️ Access is based on your plan, e.g. Free, Pro, etc",
+				"when": "gitlens:plus"
+			},
+			{
+				"view": "gitlens.views.drafts",
+				"contents": "[Start Free Pro Trial](command:gitlens.plus.loginOrSignUp)\n\nStart a free 7-day Pro trial to use Cloud Patches, or [sign in](command:gitlens.plus.loginOrSignUp).\n☁️ Requires an account and access is based on your plan, e.g. Free, Pro, etc",
+				"when": "!gitlens:plus"
 			},
 			{
 				"view": "gitlens.views.workspaces",
@@ -15014,6 +15193,15 @@
 					"contextualTitle": "GL",
 					"icon": "$(gitlens-gitlens)",
 					"initialSize": 6,
+					"visibility": "visible"
+				},
+				{
+					"id": "gitlens.views.drafts",
+					"name": "Cloud Patches",
+					"when": "!gitlens:untrusted && !gitlens:hasVirtualFolders",
+					"contextualTitle": "GL",
+					"icon": "$(cloud)",
+					"initialSize": 2,
 					"visibility": "visible"
 				},
 				{
@@ -15170,6 +15358,17 @@
 					"contextualTitle": "GL",
 					"icon": "$(gitlens-contributors-view)",
 					"visibility": "collapsed"
+				}
+			],
+			"gitlensPatch": [
+				{
+					"type": "webview",
+					"id": "gitlens.views.patchDetails",
+					"name": "Patch",
+					"when": "!gitlens:disabled",
+					"contextualTitle": "GL",
+					"icon": "$(gitlens-commit-view)",
+					"initialSize": 6
 				}
 			]
 		},
