--- a/package.json
+++ b/package.json
@@ -6685,6 +6685,12 @@
 				"icon": "$(refresh)"
 			},
 			{
+				"command": "gitlens.views.patchDetails.refresh",
+				"title": "Refresh",
+				"category": "GitLens",
+				"icon": "$(refresh)"
+			},
+			{
 				"command": "gitlens.views.commits.copy",
 				"title": "Copy",
 				"category": "GitLens"
@@ -9587,6 +9593,10 @@
 					"when": "false"
 				},
 				{
+					"command": "gitlens.views.patchDetails.refresh",
+					"when": "false"
+				},
+				{
 					"command": "gitlens.views.commits.copy",
 					"when": "false"
 				},
@@ -11158,6 +11168,11 @@
 				{
 					"command": "gitlens.views.commitDetails.refresh",
 					"when": "view =~ /^gitlens\\.views\\.commitDetails/",
+					"group": "navigation@99"
+				},
+				{
+					"command": "gitlens.views.patchDetails.refresh",
+					"when": "view =~ /^gitlens\\.views\\.patchDetails/",
 					"group": "navigation@99"
 				},
 				{
